--- a/BE FIX/package.json
+++ b/BE FIX/package.json
@@ -19,6 +19,7 @@
     "multer": "^2.0.1",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7",
+    "sharp": "^0.34.2",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0"
   }
