--- a/BE FIX/package.json
+++ b/BE FIX/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
     "express-list-endpoints": "^7.1.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
