--- a/FE CMS/package.json
+++ b/FE CMS/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "@nuxt/icon": "^1.15.0",
     "@nuxt/ui": "^2.18.4",
     "@pinia/nuxt": "^0.5.1",
     "@vee-validate/nuxt": "^4.13.2",
